--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <script>
+    print("----------------------")
+    print("----------------------")
+    print("----------------------")
+    print("----------------------")
+  </script>
   <script type="text/javascript"
       src="//www.gstatic.com/cast/sdk/libs/caf_receiver/v3/cast_receiver_framework.js">
   </script>
@@ -8,6 +14,10 @@
 <body>
   <cast-media-player></cast-media-player>
   <script>
+    print("aaaaaaaaaaaaaa")
+    print("aaaaaaaaaaaaaa")
+    print("aaaaaaaaaaaaaa")
+    print("aaaaaaaaaaaaaa")
     //cast.framework.CastReceiverContext.getInstance().start();
 
     const context = cast.framework.CastReceiverContext.getInstance();
@@ -15,11 +25,17 @@
 
     var senderId = null;
     context.addCustomMessageListener(CUSTOM_CHANNEL, function(customEvent) {
+
+
       if(customEvent.data) {
+
+        print("init")
+
           switch(customEvent.data.command) {
-            /*
+            
               case 'launchPlayer':
-                  launchPlayer(customEvent.data.params.url, customEvent.data.params.licenseUrl, customEvent.data.params.type)
+                  launchPlayer(customEvent.data.params.url, customEvent.data.params.licenseUrl, customEvent.data.params.type);
+                  print("launchPlayer")
                   break;
               case 'play':
                   play();
@@ -32,9 +48,7 @@
                   break;
               case 'registerId':
                   senderId = customEvent.senderId;
-                  */
-              case 'message':
-                  alert("message: " + customEvent.data.params.message)
+                  break;
           }
       }
     });
