--- a/index.html
+++ b/index.html
@@ -1,12 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script>
-    print("----------------------")
-    print("----------------------")
-    print("----------------------")
-    print("----------------------")
-  </script>
   <script type="text/javascript"
       src="//www.gstatic.com/cast/sdk/libs/caf_receiver/v3/cast_receiver_framework.js">
   </script>
@@ -14,10 +8,10 @@
 <body>
   <cast-media-player></cast-media-player>
   <script>
-    print("aaaaaaaaaaaaaa")
-    print("aaaaaaaaaaaaaa")
-    print("aaaaaaaaaaaaaa")
-    print("aaaaaaaaaaaaaa")
+    console.log("aaaaaaaaaaaaaa")
+    console.log("aaaaaaaaaaaaaa")
+    console.log("aaaaaaaaaaaaaa")
+    console.log("aaaaaaaaaaaaaa")
     //cast.framework.CastReceiverContext.getInstance().start();
 
     const context = cast.framework.CastReceiverContext.getInstance();
@@ -28,8 +22,6 @@
 
 
       if(customEvent.data) {
-
-        print("init")
 
           switch(customEvent.data.command) {
             
