Another custom receiver test

--- a/vo2/index.html
+++ b/vo2/index.html
@@ -50,7 +50,7 @@
                 }
                 if (loadRequest.media.customData.licenseCustomData) {
                     //playbackConfig.licenseCustomData = loadRequest.media.customData.licenseCustomData;
-                    playbackConfig.licenseCustomData = getLivePlayingInfoOrangeSeries()
+                    //playbackConfig.licenseCustomData = getLivePlayingInfoOrangeSeries()
                 }
             }
 
