--- a/custom/index.html
+++ b/custom/index.html
@@ -27,6 +27,7 @@
         var cookies = [];
 
         console.log("context getInstance()")
+        addToLog("---------------------------------------------------")
         addToLog("context getInstance()");
 
 
@@ -65,6 +66,7 @@
 
         const playbackConfig = new cast.framework.PlaybackConfig();
         playbackConfig.autoResumeDuration = 5;
+        playbackConfig.licenseUrl = licenseServerUrl;
 
         // A hook on the license request url
         playbackConfig.licenseRequestHandler = requestInfo => {
@@ -106,7 +108,7 @@
 
 
         function addToLog(message){
-            document.getElementById("log").innerHTML += "<br>" + message
+            document.getElementById("log").innerHTML += "<br>      " + message
         }
     </script>
 
