getLivePlayingInfo in manifestHandler

--- a/custom/index.html
+++ b/custom/index.html
@@ -38,8 +38,8 @@
             if (loadRequest.media.customData) {
                 addToLog("setMediaPlaybackInfoHandler customData: " + customData);
                 if (loadRequest.media.customData.licenseUrl) {
-                    //playbackConfig.licenseUrl = loadRequest.media.customData.licenseUrl;
-                    playbackConfig.licenseUrl = licenseServerUrl;
+                    playbackConfig.licenseUrl = loadRequest.media.customData.licenseUrl;
+                    //playbackConfig.licenseUrl = licenseServerUrl;
                     addToLog("licenseUrl: " + loadRequest.media.customData.licenseUrl);
                 }
                 if (loadRequest.media.customData.protectionSystem) {
@@ -69,41 +69,7 @@
             cast.framework.messages.MessageType.LOAD, loadRequestData => {
                 addToLog("setMessageInterceptor LOAD");
                 console.log("on Message LOAD");
-
-
-                var xhttpLivePlaying = new XMLHttpRequest();
-                xhttpLivePlaying.open("GET", "https://orangetv.orange.es/mob/api/rtv/v1/GetLivePlayingInfo?client=json&include_cas_token=true&channel_external_id=11002&serial_number=FD0DADFF0D46E7D656500EDAA91C264E", false);
-                xhttpLivePlaying.withCredentials = true
-                xhttpLivePlaying.send();
-
-
-                /*
-                xhttpLivePlaying.onreadystatechange = function() {
-
-                    if (this.readyState == 4 && this.status == 200) {
-                        addToLog("getLivePlayingInfo");
-                        var response = JSON.parse(xhttpLivePlaying.responseText)["response"];
-                        casToken = response["casToken"]
-                        playingUrl = response["playingUrl"]
-                        addToLog("response " + xhttpLivePlaying.responseText );
-                        
-                        //initPlaybackConfig()
-
-                        playbackConfig.licenseCustomData = casToken
-                    }
-                }
-                */
-
-                addToLog("getLivePlayingInfo");
-                var response = JSON.parse(xhttpLivePlaying.responseText)["response"];
-                casToken = response["casToken"]
-                playingUrl = response["playingUrl"]
-                addToLog("response " + xhttpLivePlaying.responseText );
-                playbackConfig.licenseCustomData = casToken
-
-
                 return loadRequestData;
-            
             });
 
         const playbackConfig = new cast.framework.PlaybackConfig();
@@ -130,6 +96,7 @@
         playbackConfig.manifestHandler = manifest => {
             console.log("manifestHandler: " + manifest);
             addToLog("manifestHandler: " + manifest)
+            getLivePlayingInfo()
             return manifest;
         };
         // A hook on the manifest request url
@@ -150,7 +117,7 @@
 
 
         function addToLog(message){
-            document.getElementById("log").innerHTML += "<br>      " + message
+            document.getElementById("log").innerHTML += "<br>                   " + message
         }
 
 
