--- a/custom/index.html
+++ b/custom/index.html
@@ -33,10 +33,7 @@
 
         // Update playback config licenseUrl according to provided value in load request.
         playerManager.setMediaPlaybackInfoHandler((loadRequest, playbackConfig) => {
-
-            addToLog("setMediaPlaybackInfoHandler: ");
             if (loadRequest.media.customData) {
-                addToLog("setMediaPlaybackInfoHandler customData: " + customData);
                 if (loadRequest.media.customData.licenseUrl) {
                     //playbackConfig.licenseUrl = loadRequest.media.customData.licenseUrl;
                     playbackConfig.licenseUrl = licenseServerUrl;
@@ -65,12 +62,7 @@
             return playbackConfig;
         });
 
-        playerManager.setMessageInterceptor(
-            cast.framework.messages.MessageType.LOAD, loadRequestData => {
-                addToLog("setMessageInterceptor LOAD");
-                console.log("on Message LOAD");
-                return loadRequestData;
-            });
+
 
         const playbackConfig = new cast.framework.PlaybackConfig();
         playbackConfig.autoResumeDuration = 5;
@@ -116,7 +108,7 @@
 
 
         function addToLog(message){
-            document.getElementById("log").innerHTML += "<br>--------------------" + message
+            document.getElementById("log").innerHTML += "<br>      " + message
         }
 
 
@@ -126,6 +118,9 @@
         xhttp.withCredentials = true
         xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
         xhttp.send("username=410000345&password=aaaa1111");
+
+
+
 
         xhttp.onreadystatechange = function() {
 
@@ -173,7 +168,7 @@
 
     function getLivePlayingInfo(){
         var xhttpLivePlaying = new XMLHttpRequest();
-        xhttpLivePlaying.open("GET", "https://orangetv.orange.es/mob/api/rtv/v1/GetLivePlayingInfo?client=json&include_cas_token=true&channel_external_id=10002&serial_number=FD0DADFF0D46E7D656500EDAA91C264E", true);
+        xhttpLivePlaying.open("GET", "https://orangetv.orange.es/mob/api/rtv/v1/GetLivePlayingInfo?client=json&include_cas_token=true&channel_external_id=1000&serial_number=FD0DADFF0D46E7D656500EDAA91C264E", true);
         xhttpLivePlaying.withCredentials = true
         xhttpLivePlaying.send();
 
