--- a/custom/index.html
+++ b/custom/index.html
@@ -159,8 +159,8 @@
                 addToLog("loginWithProfile")
                 addToLog("response " + xhttpLoginProfile.responseText )
                 addToLog("response " + JSON.parse(xhttpLoginProfile.responseText)["response"] )
-                //getLivePlayingInfo()
-                getVideoPlatingInfo()
+                getLivePlayingInfo()
+                //getVideoPlatingInfo()
             }
         }
 
