LivePlayingInfo in manifestRequestHandler

--- a/custom/index.html
+++ b/custom/index.html
@@ -94,6 +94,9 @@
         playbackConfig.manifestRequestHandler = networkRequestInfo => {
             console.log("manifestRequestHandler: " + networkRequestInfo.url);
             addToLog("manifestRequestHandler: " + networkRequestInfo.url)
+
+            getLivePlayingInfo()
+
             return networkRequestInfo;
         };
 
@@ -159,7 +162,7 @@
                 addToLog("loginWithProfile")
                 addToLog("response " + xhttpLoginProfile.responseText )
                 addToLog("response " + JSON.parse(xhttpLoginProfile.responseText)["response"] )
-                getLivePlayingInfo()
+                //getLivePlayingInfo()
                 //getVideoPlatingInfo()
             }
         }
@@ -186,6 +189,39 @@
                 initPlaybackConfig()
             }
         }
+    }
+
+
+    function getLivePlayingInfoAsync(){
+        var xhttpLivePlaying = new XMLHttpRequest();
+        xhttpLivePlaying.open("GET", "https://orangetv.orange.es/mob/api/rtv/v1/GetLivePlayingInfo?client=json&include_cas_token=true&channel_external_id=1000&serial_number=FD0DADFF0D46E7D656500EDAA91C264E", false);
+        xhttpLivePlaying.withCredentials = true
+        xhttpLivePlaying.send();
+
+        addToLog("getLivePlayingInfo");
+        var response = JSON.parse(xhttpLivePlaying.responseText)["response"];
+        casToken = response["casToken"]
+        playingUrl = response["playingUrl"]
+        addToLog("response " + xhttpLivePlaying.responseText );
+        playbackConfig.licenseCustomData = casToken
+        addToLog("play");
+        //playerManager.play()
+
+        /*
+        xhttpLivePlaying.onreadystatechange = function() {
+
+            if (this.readyState == 4 && this.status == 200) {
+                addToLog("getLivePlayingInfo");
+                var response = JSON.parse(xhttpLivePlaying.responseText)["response"];
+                casToken = response["casToken"]
+                playingUrl = response["playingUrl"]
+                addToLog("response " + xhttpLivePlaying.responseText );
+                
+                initPlaybackConfig()
+            }
+        }
+        */
+
     }
 
 
