--- a/custom/index.html
+++ b/custom/index.html
@@ -95,7 +95,8 @@
             console.log("manifestRequestHandler: " + networkRequestInfo.url);
             addToLog("manifestRequestHandler: " + networkRequestInfo.url)
 
-            getLivePlayingInfo()
+            //getLivePlayingInfo()
+            getLivePlayingInfoSync()
 
             return networkRequestInfo;
         };
@@ -192,7 +193,7 @@
     }
 
 
-    function getLivePlayingInfoAsync(){
+    function getLivePlayingInfoSync(){
         var xhttpLivePlaying = new XMLHttpRequest();
         xhttpLivePlaying.open("GET", "https://orangetv.orange.es/mob/api/rtv/v1/GetLivePlayingInfo?client=json&include_cas_token=true&channel_external_id=1000&serial_number=FD0DADFF0D46E7D656500EDAA91C264E", false);
         xhttpLivePlaying.withCredentials = true
