--- a/custom/index.html
+++ b/custom/index.html
@@ -35,7 +35,7 @@
         options.customNamespaces = {
             [channel]: cast.framework.system.MessageType.JSON
         };
-        context.start(options);
+        //context.start(options);
 
         /*
         context.sendCustomMessage(CUSTOM_NS, {
