--- a/custom/index.html
+++ b/custom/index.html
@@ -32,21 +32,12 @@
 
 
         const options = new cast.framework.CastReceiverOptions();
-        /*
+        
         options.customNamespaces = {
             [channel]: cast.framework.system.MessageType.JSON
         };
-        */
-        options.customNamespaces = Object.assign({});
-        options.customNamespaces[channel] = cast.framework.system.MessageType.JSON;
+        
         //context.start(options);
-
-        /*
-        context.sendCustomMessage(CUSTOM_NS, {
-            type: 'status',
-            message: 'Playing'
-        });
-        */
 
 
 
@@ -254,6 +245,12 @@
 
 
         addToLog("played");
+
+
+        context.sendCustomMessage(channel, {
+            type: 'status',
+            message: 'Playing'
+        });
     }
 
     </script>
