--- a/chromecast_sender/index.html
+++ b/chromecast_sender/index.html
@@ -31,6 +31,7 @@
 <body>
   <div id="top_header">
     <div id="logo"></div>
+    <div>SendMessage <button text="Send" onclick="setCustomMessage()"></div>
   </div>
   <div id="main_video">
     <div class="imageSub">
