--- a/custom/index.html
+++ b/custom/index.html
@@ -25,6 +25,7 @@
         const playerManager = context.getPlayerManager();
         const licenseServerUrl = "https://orangetv.orange.es/mob/api/rtv/v1/drm";
         var cookies = [];
+        var channel_external_id = "1000"
 
         console.log("context getInstance()")
         addToLog("---------------------------------------------------")
@@ -116,6 +117,11 @@
             var message = customEvent.data
             var command = message.command
             var params = message.params
+
+            if (command == "switchLive"){
+                switchLiveChannel(params)
+            }
+            /*
             var text = params.text
             var log = "Message received from " + 
                         "[" +  customEvent.senderId +  "],  " +
@@ -123,6 +129,7 @@
                         " text: " + text;
             addToLog(log);
             console.log(log);
+            */
           });
 
 
@@ -136,6 +143,10 @@
             document.getElementById("log").innerHTML += "<br>      " + message
         }
 
+        function switchLiveChannel(params){
+            channel_external_id = params.channelExternalId
+            addToLog("channel_external_id: " + channel_external_id)
+        }
 
     function postLogin(){
         var xhttp = new XMLHttpRequest();
@@ -194,7 +205,7 @@
 
     function getLivePlayingInfo(){
         var xhttpLivePlaying = new XMLHttpRequest();
-        xhttpLivePlaying.open("GET", "https://orangetv.orange.es/mob/api/rtv/v1/GetLivePlayingInfo?client=json&include_cas_token=true&channel_external_id=1000&serial_number=FD0DADFF0D46E7D656500EDAA91C264E", true);
+        xhttpLivePlaying.open("GET", "https://orangetv.orange.es/mob/api/rtv/v1/GetLivePlayingInfo?client=json&include_cas_token=true&channel_external_id=" + channel_external_id + "&serial_number=FD0DADFF0D46E7D656500EDAA91C264E", true);
         xhttpLivePlaying.withCredentials = true
         xhttpLivePlaying.send();
 
