Test playing duplicate

--- a/custom/index.html
+++ b/custom/index.html
@@ -139,7 +139,7 @@
 
 
         function clearLog(){
-            document.getElementById("log").innerHTML += ""
+            document.getElementById("log").innerHTML = ""
         }
 
         function addToLog(message){
@@ -149,6 +149,7 @@
         function switchLiveChannel(params){
             channel_external_id = params.channelExternalId
             addToLog("channel_external_id: " + channel_external_id)
+            getLivePlayingInfo()
         }
 
     function postLogin(){
