Comment getLivePlayingInfo changing channel

--- a/custom/index.html
+++ b/custom/index.html
@@ -151,7 +151,7 @@
         function switchLiveChannel(params){
             channel_external_id = params.channelExternalId
             addToLog("channel_external_id: " + channel_external_id)
-            getLivePlayingInfo()
+            //getLivePlayingInfo()
         }
 
 
