--- a/custom/index.html
+++ b/custom/index.html
@@ -44,6 +44,8 @@
 
         // Update playback config licenseUrl according to provided value in load request.
         playerManager.setMediaPlaybackInfoHandler((loadRequest, playbackConfig) => {
+            addToLog("setMediaPlaybackInfoHandler: ");
+            addToLog("customData: " + customData);
             if (loadRequest.media.customData) {
                 if (loadRequest.media.customData.licenseUrl) {
                     //playbackConfig.licenseUrl = loadRequest.media.customData.licenseUrl;
