--- a/custom/index.html
+++ b/custom/index.html
@@ -163,6 +163,82 @@
         }
 
 
+        function postLogin(){		
+         var xhttp = new XMLHttpRequest();		
+         xhttp.open("POST", "https://orangetv.orange.es/pc/api/rtv/v1/Login?client=json", true);		
+         xhttp.withCredentials = true		
+         xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");		
+         xhttp.send("username=410000345&password=aaaa1111");		
+
+ 
+ 
+ 
+          xhttp.onreadystatechange = function() {		
+
+              if (this.readyState == 4 && this.status == 200) {		
+                 addToLog("postLogin")		
+                 addToLog("response: " + xhttp.responseText )		
+                 var status = JSON.parse(xhttp.responseText)["response"]["status"] 		
+                 addToLog("response: " + status )		
+                 if (status == "SUCCESS"){		
+                     loginWithProfile()		
+                 }		
+             }		
+
+ 
+              /*		
+             if(this.readyState == this.HEADERS_RECEIVED) {		
+		
+             // Get the raw header string		
+             var headers = xhttp.getAllResponseHeaders();		
+             console.log(headers)		
+             }		
+             */		
+         }		
+     }		
+
+ 
+      function loginWithProfile(xhttp){		
+         var xhttpLoginProfile = new XMLHttpRequest();		
+         xhttpLoginProfile.open("GET", "https://orangetv.orange.es/pc/api/reco/v1/Login?client=json&profile_id=2597776", true);		
+         xhttpLoginProfile.withCredentials = true		
+         xhttpLoginProfile.send();		
+
+ 
+          xhttpLoginProfile.onreadystatechange = function() {		
+             if (this.readyState == 4 && this.status == 200) {		
+                 addToLog("loginWithProfile")		
+                 addToLog("response " + xhttpLoginProfile.responseText )		
+                 addToLog("response " + JSON.parse(xhttpLoginProfile.responseText)["response"] )		
+                 //getLivePlayingInfo()		
+                 //getVideoPlatingInfo()		
+             }		
+         }		
+
+      }		
+
+ 
+      function getLivePlayingInfo(){		
+         var xhttpLivePlaying = new XMLHttpRequest();		
+         xhttpLivePlaying.open("GET", "https://orangetv.orange.es/mob/api/rtv/v1/GetLivePlayingInfo?client=json&include_cas_token=true&channel_external_id=" + channel_external_id + "&serial_number=FD0DADFF0D46E7D656500EDAA91C264E", true);		
+         xhttpLivePlaying.withCredentials = true		
+         xhttpLivePlaying.send();		
+
+ 
+          xhttpLivePlaying.onreadystatechange = function() {		
+
+              if (this.readyState == 4 && this.status == 200) {		
+                 addToLog("getLivePlayingInfo");		
+                 var response = JSON.parse(xhttpLivePlaying.responseText)["response"];		
+                 casToken = response["casToken"]		
+                 playingUrl = response["playingUrl"]		
+                 addToLog("response " + xhttpLivePlaying.responseText );		
+
+                  initPlaybackConfig()		
+             }		
+         }		
+     }		
+
     /*
     function getVideoPlatingInfo(){
         var xhttp = new XMLHttpRequest();
@@ -231,8 +307,10 @@
     }
 
 
-    var rtv = new rtvHandler();
-    rtv.loginWithData("410000345", "aaaa1111", "2597776", log );
+    //var rtv = new rtvHandler();
+    //rtv.loginWithData("410000345", "aaaa1111", "2597776", log );
+
+    postLogin()
 
     </script>
 
