--- a/custom/index.html
+++ b/custom/index.html
@@ -112,10 +112,10 @@
             console.log("manifestRequestHandler: " + networkRequestInfo.url);
             addToLog("manifestRequestHandler: " + networkRequestInfo.url)
 
-            //getLivePlayingInfo()
+            getLivePlayingInfo()
             //getVideoPlatingInfo
 
-            rtv.getVideoPlatingInfo("1000", addToLog, setLicense)
+            //rtv.getLivePlayingInfo("1000", addToLog, setLicense)
 
             return networkRequestInfo;
         };
