--- a/custom/index.html
+++ b/custom/index.html
@@ -220,7 +220,7 @@
  
       function getLivePlayingInfo(){		
          var xhttpLivePlaying = new XMLHttpRequest();		
-         xhttpLivePlaying.open("GET", "https://orangetv.orange.es/mob/api/rtv/v1/GetLivePlayingInfo?client=json&include_cas_token=true&channel_external_id=" + channel_external_id + "&serial_number=FD0DADFF0D46E7D656500EDAA91C264E", true);		
+         xhttpLivePlaying.open("GET", "https://orangetv.orange.es/mob/api/rtv/v1/GetLivePlayingInfo?client=json&include_cas_token=true&channel_external_id=1000&serial_number=FD0DADFF0D46E7D656500EDAA91C264E", true);		
          xhttpLivePlaying.withCredentials = true		
          xhttpLivePlaying.send();		
 
