Change to pc urls

--- a/custom/index.html
+++ b/custom/index.html
@@ -165,7 +165,7 @@
 
         function postLogin(){		
          var xhttp = new XMLHttpRequest();		
-         xhttp.open("POST", "https://orangetv.orange.es/mob/api/rtv/v1/Login?client=json", true);		
+         xhttp.open("POST", "https://orangetv.orange.es/pc/api/rtv/v1/Login?client=json", true);		
          xhttp.withCredentials = true		
          xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");		
          xhttp.send("username=410000345&password=aaaa1111");		
@@ -200,7 +200,7 @@
  
       function loginWithProfile(xhttp){		
          var xhttpLoginProfile = new XMLHttpRequest();		
-         xhttpLoginProfile.open("GET", "https://orangetv.orange.es/mob/api/reco/v1/Login?client=json&profile_id=2597776", true);		
+         xhttpLoginProfile.open("GET", "https://orangetv.orange.es/pc/api/reco/v1/Login?client=json&profile_id=2597776", true);		
          xhttpLoginProfile.withCredentials = true		
          xhttpLoginProfile.send();		
 
@@ -220,7 +220,7 @@
  
       function getLivePlayingInfo(){		
          var xhttpLivePlaying = new XMLHttpRequest();		
-         xhttpLivePlaying.open("GET", "https://orangetv.orange.es/mob/api/rtv/v1/GetLivePlayingInfo?client=json&include_cas_token=true&channel_external_id=1000&serial_number=FD0DADFF0D46E7D656500EDAA91C264E", true);		
+         xhttpLivePlaying.open("GET", "https://orangetv.orange.es/pc/api/rtv/v1/GetLivePlayingInfo?client=json&include_cas_token=true&channel_external_id=1000&serial_number=FD0DADFF0D46E7D656500EDAA91C264E", true);		
          xhttpLivePlaying.withCredentials = true		
          xhttpLivePlaying.send();		
 
